samples/_failures_safe/1761539760_9ecc25_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3fabc744.c: In function ‘main’:
./samples/SAFE/__tmp_3fabc744.c:141:13: error: expected expression at end of input
  141 |             if (filter_level != -1 && entries[i].level == filter_level)
      |             ^~
./samples/SAFE/__tmp_3fabc744.c:141:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3fabc744.c:141:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3fabc744.c:141:13: error: expected declaration or statement at end of input
